<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Pump</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Find Fuel:</string>
    <string name="button1"> Calculate </string>
    <string name="button2"> Reset </string>
    <string name="text1">Fuel Price</string>
    <string name="text2">Average MPG</string>
    <string name="text3">Miles</string>
    <string name="text4">Vehicle Year</string>
    <string name="text5">Vehicle make</string>
    <string name="text6">Vehicle Model</string>
    <string name="text7">Vehicle ID</string>
    <string name="textView2">OR</string>
    <string name="AddV">Add Vehicle</string>
    <string name="ResetV">Reset</string>
    <string name="title_activity_car_info">New Vehicle Record</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_main"> Home </string>
    <string name="text8">Latitude</string>
    <string name="text9">Longitude</string>
    <string name="action_done">Done</string>
    <string name="maps_api_key">AIzaSyBEKWe_ckGIC98ND3RHghNYtLJfpWbEcE0</string>
    <string name="title_activity_map_view">MapView</string>
    <string-array name="years_spinner">
        <item >2014</item>        <item >2013</item>        <item >2012</item>        <item >2011</item>
        <item >2010</item>        <item >2009</item>        <item >2008</item>        <item >2007</item>
        <item >2006</item>        <item >2005</item>        <item >2004</item>        <item >2003</item>
        <item >2002</item>        <item >2001</item>        <item >2000</item>        <item >1999</item>
        <item >1998</item>        <item >1997</item>        <item >1996</item>        <item >1995</item>
        <item >1994</item>        <item >1993</item>        <item >1992</item>        <item >1991</item>
        <item >1990</item>        <item >1989</item>        <item >1988</item>        <item >1987</item>
        <item >1986</item>        <item >1985</item>        <item >1984</item>
    </string-array>
    
    <string-array name="makes_spinner"></string-array> 
    <string name="title_activity_main_test">MainTest</string>
    <string name="favorites">Favorites</string>
    <string-array name="fuel_types">
        <item>Select fuel type</item>
        <item>reg</item>
        <item>mid</item>
        <item>pre</item>
        <item>diesel</item>
    </string-array>
    
    <string name="search_results">Search Results</string>
    
    <string name="no_favorite_stations">No saved favorites to display</string>
    <string name="fuelSelectionLabel">View fuel price</string>
    <string name="fuel_type_prompt">Select fuel type</string>
    <string name="estimate_gallons"># Gallons</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="searchByAddress">City,State OR Zip</string>
    <string name="searchByLocation">Search Near Me</string>
    <string name="or_label">OR</string>
    
    <string name="get_directions">Get Directions</string>
    <string name="distance_away">Distance</string>
    <string name="pump_price">Pump Price</string>
    <string name="adjusted_cost">Adjusted Cost</string>
    <string name="pump">Pump</string>
    <string name="adjusted">Adjusted</string>
    <string name="sort_adj_cost">Sort By Adjusted Cost</string>
</resources>