<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/stationSummary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        
        <ImageView
            android:id="@+id/stationLogo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/gasstation"/>
        
        <TextView
           android:id="@+id/stationName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/stationLogo"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:textSize="18sp" >
        </TextView>
        
        <TextView
            android:id="@+id/stationAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stationLogo"
            android:layout_toLeftOf="@+id/distanceAway"
            android:layout_alignParentLeft="true"
            android:textSize="14sp" >
        </TextView>
        
        <TextView
            android:id="@+id/distanceAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stationLogo"
            android:layout_alignParentRight="true"
            android:textSize="14sp" >
        </TextView>
        
        <TextView
            android:id="@+id/cityStateZip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stationAddress"
            android:textSize="14sp" >
        </TextView>
    </RelativeLayout>
    
    <fragment
        android:id="@+id/miniMap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/stationSummary"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp" />
    
    <Button
        android:id="@+id/ChooseDestination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/miniMap"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" 
        android:layout_marginBottom="10dp" 
        android:text="@string/get_directions" 
        android:textColor="#FFFFFF"
        android:background="#EF9E40"/>

    <RelativeLayout
        android:id="@+id/fuelSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChooseDestination"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
           android:id="@+id/fuelSelectionLabel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
           android:text="@string/fuelSelectionLabel"
           android:textSize="18sp"
           android:textColor="#000000" >
        </TextView>
        
        <Spinner
            android:id="@+id/fuelType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fuelSelectionLabel"
            android:layout_toLeftOf="@+id/estimatedGallons"
            android:layout_alignParentLeft="true"
        />
        <EditText
            android:id="@+id/estimatedGallons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fuelSelectionLabel"
            android:layout_alignParentRight="true"
            android:inputType="number"
            android:hint="@string/estimate_gallons">
        </EditText>
        
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fuelType"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:background="#EF9E40" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/priceSummary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChooseDestination"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/adjustedLabel"
            android:text="@string/pump_price"
            android:textSize="18sp" >

        </TextView>
        
        <TextView
            android:id="@+id/adjustedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:text="@string/adjusted_cost"
            android:textSize="18sp" >
        </TextView>
        
        <TextView
            android:id="@+id/stationPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/stationAdjustedCost"
            android:layout_below="@+id/priceLabel"
            android:textSize="22sp" >
        </TextView>
        
        <TextView
            android:id="@+id/stationAdjustedCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/priceLabel"
            android:textSize="22sp" >
        </TextView>
        
    </RelativeLayout>
    
</RelativeLayout>
